<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/ten_dp"
    app:cardElevation="@dimen/four_dp"
    app:cardCornerRadius="@dimen/five_dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/ten_dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/twenty_dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/twenty_dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_email_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/forty_dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:maxLines="3"
                android:layout_marginStart="@dimen/forty_dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_50"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/thirteen_dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_height"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height_5_3"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/ten_dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_no"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_phone_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_no"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/thirty_dp"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginEnd="@dimen/five_dp"
            android:layout_marginTop="@dimen/five_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv_item_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_value"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fifteen_sp"
                android:textStyle="normal"
                android:layout_marginStart="@dimen/sixty_five_dp"/>

        </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/two_dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

            <ImageButton
                android:id="@+id/btn_item_delete"
                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"
                android:src="@drawable/ic_baseline_delete_forever_24"
                android:layout_marginBottom="@dimen/twenty_dp"
                android:background="@android:color/white"/>

            <ImageButton
                android:id="@+id/btn_item_edit"
                android:layout_width="@dimen/forty_dp"
                android:layout_height="@dimen/forty_dp"
                android:src="@drawable/ic_baseline_edit_24"
                android:background="@android:color/white"
                android:text="@string/edit"/>

        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>