<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditorFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_ip_et_first_name_editor_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_first_name"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_ip_et_last_name_editor_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_last_name"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_ip_et_email_editor_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_ip_et_address_editor_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_address"
                android:inputType="text"
                android:maxLines="2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sixteen_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/eighteen_sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_weight_decrement"
                    android:layout_width="@dimen/thirty_seven_dp"
                    android:layout_height="@dimen/thirty_seven_dp"
                    android:background="@drawable/background_circle_button"
                    android:textSize="@dimen/twenty_two_sp"
                    android:text="@string/decrement"
                    android:textColor="@android:color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/weight_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/twenty_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:text="@string/initial_weight_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_two_sp" />

                <Button
                    android:id="@+id/btn_weight_increment"
                    android:layout_width="@dimen/thirty_seven_dp"
                    android:layout_height="@dimen/thirty_seven_dp"
                    android:background="@drawable/background_circle_button"
                    android:textSize="@dimen/twenty_two_sp"
                    android:text="@string/increment"
                    android:textColor="@android:color/white"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sixteen_dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/height"
                android:layout_gravity="center_horizontal"
                android:textSize="@dimen/eighteen_sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_height_decrement"
                    android:layout_width="@dimen/thirty_seven_dp"
                    android:layout_height="@dimen/thirty_seven_dp"
                    android:background="@drawable/background_circle_button"
                    android:textSize="@dimen/twenty_two_sp"
                    android:text="@string/decrement"
                    android:textColor="@android:color/white"
                    android:gravity="center"/>

                <TextView
                    android:id="@+id/tv_height_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/twenty_dp"
                    android:layout_marginEnd="@dimen/twenty_dp"
                    android:text="@string/initial_weight_value"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/twenty_two_sp" />

                <Button
                    android:id="@+id/btn_height_increment"
                    android:layout_width="@dimen/thirty_seven_dp"
                    android:layout_height="@dimen/thirty_seven_dp"
                    android:background="@drawable/background_circle_button"
                    android:textSize="@dimen/twenty_two_sp"
                    android:text="@string/increment"
                    android:textColor="@android:color/white"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_ip_et_phone_no_editor_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/enter_your_phone_no"
                android:inputType="phone"
                android:maxLength="10"
                android:maxLines="2"/>

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <DatePicker
            android:id="@+id/date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/ten_dp"/>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_get_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_rectangle_button"
            android:textColor="@android:color/white"
            android:textAllCaps="false"
            android:text="@string/get_date"/>

        <TextView
            android:id="@+id/tv_date_from_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/twenty_sp"
            android:layout_margin="@dimen/ten_dp"
            android:layout_marginBottom="@dimen/twenty_dp"/>

    </LinearLayout>


</ScrollView>